# k8s-cli

./: .gitignore  README.md  deployment.yaml  pyproject.toml  requirements.txt  setup.py
k8s_cli.egg-info/: SOURCES.txt
modules/: deployment.py  health.py  helm.py  hpa.py  keda.py
tests/: test_cluster.py
